fixed spacing issue

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -262,7 +262,7 @@ header .logo {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    width: 100;
+    width: 100%;
     height: 100%;
     padding: 0 10px;
 }
